[gd_scene load_steps=19 format=2]

[ext_resource path="res://mapa ping pong.tres" type="TileSet" id=1]
[ext_resource path="res://scripts/BolaMov.gd" type="Script" id=2]
[ext_resource path="res://scripts/atividade piog pong.gd" type="Script" id=3]
[ext_resource path="res://fonte/golden chesse.otf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://scripts/Player2.gd" type="Script" id=6]
[ext_resource path="res://assets/bola.png" type="Texture" id=7]
[ext_resource path="res://sounds/ping_pong_8bit_beeep.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/player.png" type="Texture" id=9]
[ext_resource path="res://scripts/GlobalVariable.gd" type="Script" id=11]

[sub_resource type="VisualShader" id=1]
code = "shader_type spatial;
render_mode specular_schlick_ggx, async_visible;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -254.627, 281.202 )
nodes/fragment/0/position = Vector2( 240, 180 )

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 53, 5 )

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 17.75, 180.875 )

[sub_resource type="DynamicFont" id=7]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="atividade" type="Node2D"]
position = Vector2( 189, 420 )
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 17, -5 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
show_collision = true
format = 1
tile_data = PoolIntArray( -1572870, 0, 0, -1572869, 0, 0, -1572868, 0, 0, -1572867, 0, 0, -1572866, 0, 0, -1572865, 0, 0, -1638400, 0, 0, -1638399, 0, 0, -1638398, 0, 0, -1638397, 0, 0, -1638396, 0, 0, -1638395, 0, 0, -1638394, 0, 0, -1638393, 0, 0, -1638392, 0, 0, -1638391, 0, 0, -1638390, 0, 0, -1638389, 0, 0, -1638388, 0, 0, -1638387, 0, 0, -1638386, 0, 0, -1638385, 0, 0, -1638384, 0, 0, -1638383, 0, 0, -1638382, 0, 0, -1638381, 0, 0, -1638380, 0, 0, -1638379, 0, 0, -1638378, 0, 0, -1638377, 0, 0, -1638376, 0, 0, -1638375, 0, 0, -1638374, 0, 0, -1638373, 0, 0, -1638372, 0, 0, -1638371, 0, 0, -1638370, 0, 0, -1638369, 0, 0, -1638368, 0, 0, -1638367, 0, 0, -1638366, 0, 0, -1638365, 0, 0, -1638364, 0, 0, -1638363, 0, 0, -1638362, 0, 0, -1638361, 0, 0, -1638360, 0, 0, -1638359, 0, 0, -1638358, 0, 0, -1638357, 0, 0, -1638356, 0, 0, -1507334, 0, 0, -1507333, 0, 0, -1507332, 0, 0, -1507331, 0, 0, -1507330, 0, 0, -1507329, 0, 0, -1572864, 0, 0, -1572863, 0, 0, -1572862, 0, 0, -1572861, 0, 0, -1572860, 0, 0, -1572859, 0, 0, -1572858, 0, 0, -1572857, 0, 0, -1572856, 0, 0, -1572855, 0, 0, -1572854, 0, 0, -1572853, 0, 0, -1572852, 0, 0, -1572851, 0, 0, -1572850, 0, 0, -1572849, 0, 0, -1572848, 0, 0, -1572847, 0, 0, -1572846, 0, 0, -1572845, 0, 0, -1572844, 0, 0, -1572843, 0, 0, -1572842, 0, 0, -1572841, 0, 0, -1572840, 0, 0, -1572839, 0, 0, -1572838, 0, 0, -1572837, 0, 0, -1572836, 0, 0, -1572835, 0, 0, -1572834, 0, 0, -1572833, 0, 0, -1572832, 0, 0, -1572831, 0, 0, -1572830, 0, 0, -1572829, 0, 0, -1572828, 0, 0, -1572827, 0, 0, -1572826, 0, 0, -1572825, 0, 0, -1572824, 0, 0, -1572823, 0, 0, -1572822, 0, 0, -1572821, 0, 0, -1572820, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 65572, 0, 0, 65573, 0, 0, 65574, 0, 0, 65575, 0, 0, 65576, 0, 0, 65577, 0, 0, 65578, 0, 0, 65579, 0, 0, 65580, 0, 0 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 10, -198 )
rotation = 1.5708
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player"]
material = SubResource( 2 )
position = Vector2( 3.8147e-06, 4.76837e-07 )
scale = Vector2( 6.625, 0.625 )
texture = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
material = SubResource( 3 )
use_parent_material = true
shape = SubResource( 4 )

[node name="player2" type="KinematicBody2D" parent="."]
position = Vector2( 624, -197 )
rotation = 1.5708
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="player2"]
material = SubResource( 2 )
position = Vector2( -0.0943451, 0 )
scale = Vector2( 6.625, 0.625 )
texture = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="player2"]
material = SubResource( 3 )
use_parent_material = true
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 327, -191 )
current = true
zoom = Vector2( 0.8, 0.714 )

[node name="Bolas" type="Node2D" parent="."]
position = Vector2( 327, -192 )
__meta__ = {
"_edit_group_": true
}

[node name="bola2" type="KinematicBody2D" parent="Bolas"]
position = Vector2( 1, 0 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Bolas/bola2"]
position = Vector2( 0.5, 3.5 )
scale = Vector2( 1.01563, 1.01563 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bolas/bola2"]
position = Vector2( 1, 1 )
shape = SubResource( 5 )

[node name="paredeDireita" type="Area2D" parent="."]
position = Vector2( 733, -186 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="paredeDireita"]
position = Vector2( -12.25, -3.125 )
shape = SubResource( 6 )

[node name="paredeEsquerda" type="Area2D" parent="."]
position = Vector2( -61, -188 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="paredeEsquerda"]
position = Vector2( -1, -2 )
shape = SubResource( 6 )

[node name="PlacaP1" type="Label" parent="."]
margin_left = 195.0
margin_top = -366.0
margin_right = 235.0
margin_bottom = -350.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
script = ExtResource( 11 )

[node name="PlacaP2" type="Label" parent="."]
margin_left = 403.0
margin_top = -367.0
margin_right = 443.0
margin_bottom = -353.0
custom_fonts/font = SubResource( 8 )
text = "0"
script = ExtResource( 11 )

[node name="Scoreboard" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="paredeDireita" to="." method="_on_paredeDireita_body_entered"]
[connection signal="body_entered" from="paredeEsquerda" to="." method="_on_paredeEsquerda_body_entered"]
